[gd_scene load_steps=2 format=3 uid="uid://bwdsegyhepe5o"]

[ext_resource type="Script" uid="uid://chfyo4sbk14ri" path="res://scripts/disctactions/distraction_timer_button.gd" id="1_tm04t"]

[node name="distraction_timer_button" type="ColorRect" groups=["distraction"]]
custom_minimum_size = Vector2(128, 128)
script = ExtResource("1_tm04t")

[node name="Timer" type="Timer" parent="."]

[node name="Timer_Scorer" type="Timer" parent="."]
editor_description = "Used for assigning points to the game manager"

[node name="Button" type="Button" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = 9.785
offset_right = 55.0
offset_bottom = 40.785
grow_horizontal = 2
grow_vertical = 2
text = "reset"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -38.515
offset_right = 20.0
offset_bottom = -15.515
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "simple timer"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer_Scorer" to="." method="_on_timer_scorer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
